--- a/temas.html
+++ b/temas.html
@@ -387,57 +387,23 @@ div.tocify {
 </div>
 
 
-<div id="about-us" class="section level1">
-<h1>About us</h1>
-<p>4GlobalSustainability is a Network of Institutions (formal and non-formal), Companies and Professionals with different interests (environmental, social, economic, environmental, technological, strategic) around sustainability and issues of digital transformation and industry 4.0.</p>
+<div id="governance-and-politics" class="section level1">
+<h1>Governance and politics</h1>
 </div>
-<div id="collaboration-model" class="section level1">
-<h1>Collaboration model</h1>
-<div id="institutions" class="section level2">
-<h2>Institutions</h2>
-<table>
-<thead>
-<tr class="header">
-<th>UdeC</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><img src="image/udec-150.png" /></td>
-</tr>
-</tbody>
-</table>
+<div id="economy" class="section level1">
+<h1>Economy</h1>
+<div id="circular-economy" class="section level2">
+<h2>circular economy</h2>
 </div>
-<div id="companies" class="section level2">
-<h2>Companies</h2>
 </div>
-<div id="professionals-and-people" class="section level2">
-<h2>Professionals and people</h2>
-<table>
-<colgroup>
-<col width="25%" />
-<col width="25%" />
-<col width="25%" />
-<col width="25%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Equipo</th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><img src="image/gustavo-150.png" /></td>
-<td><strong>Phd (c) M.Sc. Gustavo Godoy U.</strong>, School of Sciences and Technologies. Department of Geodetic and Geomatics Sciences. University of Concepción Campus Los Angeless</td>
-<td><img src="" /></td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<div id="environment" class="section level1">
+<h1>Environment</h1>
 </div>
+<div id="digital-transformation" class="section level1">
+<h1>Digital Transformation</h1>
+</div>
+<div id="industry-4.0" class="section level1">
+<h1>Industry 4.0</h1>
 </div>
 
 
