--- a/contacto.html
+++ b/contacto.html
@@ -352,6 +352,9 @@ div.tocify {
   <a href="index.html">4GlobalSostenibilidad</a>
 </li>
 <li>
+  <a href="temas.html">Topics</a>
+</li>
+<li>
   <a href="comunidad.html">Network Community</a>
 </li>
 <li>
