--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@ div.tocify {
   <a href="index.html">4GlobalSostenibilidad</a>
 </li>
 <li>
+  <a href="temas.html">Topics</a>
+</li>
+<li>
   <a href="comunidad.html">Network Community</a>
 </li>
 <li>
@@ -384,8 +387,12 @@ div.tocify {
 </div>
 
 
-<div id="view" class="section level1">
-<h1>View</h1>
+<div id="gs" class="section level1">
+<h1>4GS</h1>
+<p>4GlobalSustainability -&gt; Global Sustainability 4.0</p>
+</div>
+<div id="vision" class="section level1">
+<h1>Vision</h1>
 <p>4GlobalSustainability aims to be an open Network of Institutions (formal and non-formal), Companies and Professionals with different interests (environmental, social, economic, environmental, technological, strategic) around sustainability and issues of digital transformation and industry 4.0 on a scale Global.</p>
 </div>
 <div id="mission" class="section level1">
