--- a/temas.html
+++ b/temas.html
@@ -387,8 +387,32 @@ div.tocify {
 </div>
 
 
+<div id="sustainability" class="section level1">
+<h1>Sustainability</h1>
+<div id="sustainable-development-goals" class="section level2">
+<h2>Sustainable Development Goals</h2>
+</div>
+</div>
 <div id="governance-and-politics" class="section level1">
 <h1>Governance and politics</h1>
+</div>
+<div id="projects" class="section level1">
+<h1>Projects</h1>
+<div id="project-sustainability-management" class="section level2">
+<h2>Project sustainability management</h2>
+</div>
+</div>
+<div id="smart-cities" class="section level1">
+<h1>Smart cities</h1>
+<div id="urban-development" class="section level2">
+<h2>Urban development</h2>
+</div>
+<div id="energy" class="section level2">
+<h2>Energy</h2>
+</div>
+<div id="digital-twins" class="section level2">
+<h2>Digital Twins</h2>
+</div>
 </div>
 <div id="economy" class="section level1">
 <h1>Economy</h1>
@@ -401,9 +425,12 @@ div.tocify {
 </div>
 <div id="digital-transformation" class="section level1">
 <h1>Digital Transformation</h1>
+<div id="industry-4.0" class="section level2">
+<h2>Industry 4.0</h2>
+<ul>
+<li>Sustainability strategies for industries ## Entrepreneurship</li>
+</ul>
 </div>
-<div id="industry-4.0" class="section level1">
-<h1>Industry 4.0</h1>
 </div>
 
 
