--- a/actividades.html
+++ b/actividades.html
@@ -401,8 +401,8 @@ div.tocify {
 </div>
 <div id="projects" class="section level1">
 <h1>Projects</h1>
-<div id="ocre---gegional-school-scientific-observatory" class="section level2">
-<h2>OCRE - Gegional School Scientific Observatory</h2>
+<div id="ocre---regional-school-scientific-observatory" class="section level2">
+<h2>OCRE - Regional School Scientific Observatory</h2>
 <p>The Scientific School Observatory is an initiative of teachers from different higher education establishments (Universidad de Concepción, Universidad de la Serena, Universidad Adventista currently [04-28-2021]) in Chile, committed and aligned with development and decentralization processes in the region and the country, seeking with interest the free development of individuals, especially the high school community, where teachers and students elaborate part of the foundation of our society. At the same time that we build preventive actions against environmental and social problems, we are facing the challenges in the network.<a href="https://observatoriocientifico.github.io/">Visit site</a></p>
 </div>
 </div>
