--- a/temas.html
+++ b/temas.html
@@ -419,6 +419,9 @@ div.tocify {
 <div id="circular-economy" class="section level2">
 <h2>circular economy</h2>
 </div>
+<div id="entrepreneurship" class="section level2">
+<h2>Entrepreneurship</h2>
+</div>
 </div>
 <div id="environment" class="section level1">
 <h1>Environment</h1>
@@ -428,7 +431,7 @@ div.tocify {
 <div id="industry-4.0" class="section level2">
 <h2>Industry 4.0</h2>
 <ul>
-<li>Sustainability strategies for industries ## Entrepreneurship</li>
+<li>Sustainability strategies for industries</li>
 </ul>
 </div>
 </div>
