--- a/comunidad.html
+++ b/comunidad.html
@@ -431,7 +431,7 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td><img src="image/gustavo-150.png" /></td>
-<td><strong>Phd (c) M.Sc. Gustavo Godoy U.</strong>, School of Sciences and Technologies. Department of Geodetic and Geomatics Sciences. University of Concepción Campus Los Angeless</td>
+<td><strong>M.Sc. Gustavo Godoy U.</strong>, School of Sciences and Technologies. Department of Geodetic and Geomatics Sciences. University of Concepción Campus Los Angeless</td>
 <td><img src="" /></td>
 <td></td>
 </tr>
