--- a/temas.html
+++ b/temas.html
@@ -395,44 +395,16 @@ div.tocify {
 </div>
 <div id="governance-and-politics" class="section level1">
 <h1>Governance and politics</h1>
-</div>
-<div id="projects" class="section level1">
-<h1>Projects</h1>
-<div id="project-sustainability-management" class="section level2">
-<h2>Project sustainability management</h2>
-</div>
-</div>
-<div id="smart-cities" class="section level1">
-<h1>Smart cities</h1>
-<div id="urban-development" class="section level2">
-<h2>Urban development</h2>
-</div>
-<div id="energy" class="section level2">
-<h2>Energy</h2>
-</div>
-<div id="digital-twins" class="section level2">
-<h2>Digital Twins</h2>
-</div>
-</div>
-<div id="economy" class="section level1">
-<h1>Economy</h1>
-<div id="circular-economy" class="section level2">
-<h2>circular economy</h2>
-</div>
-<div id="entrepreneurship" class="section level2">
-<h2>Entrepreneurship</h2>
-</div>
-</div>
-<div id="environment" class="section level1">
-<h1>Environment</h1>
-</div>
-<div id="digital-transformation" class="section level1">
-<h1>Digital Transformation</h1>
-<div id="industry-4.0" class="section level2">
-<h2>Industry 4.0</h2>
+<div id="agreement" class="section level2">
+<h2>Agreement</h2>
+<div id="paris.-achievements-and-weaknesses" class="section level3">
+<h3>20210521 Paris. Achievements and weaknesses</h3>
 <ul>
+<li><a href="https://direct.mit.edu/glep/article/16/3/1/14984/The-Paris-Agreement-on-Climate-Change-Behind">Reference</a> ## The importance of data in sustainable development, visualization and decision making</li>
+<li><a href="https://arxiv.org/abs/1510.00098">Reference</a> # Projects ## Project sustainability management # Smart cities ## Urban development ## Energy ## Digital Twins # Economy ## circular economy ## Entrepreneurship # Environment # Digital Transformation ## Industry 4.0</li>
 <li>Sustainability strategies for industries</li>
 </ul>
+</div>
 </div>
 </div>
 
