--- a/temas.html
+++ b/temas.html
@@ -389,8 +389,8 @@ div.tocify {
 
 <div id="questions-to-the-knowledge-model" class="section level1">
 <h1>Questions to the knowledge model</h1>
-<p>If you have a question about any topic of the knowledge model, enter it in the respective box to facilitate its classification and answer.</p>
-<p>Please take a minute to identify where to make your response, this will have a positive impact on the time, energy and resources that will be needed to manage the response and will reduce the digital footprint within the process.</p>
+<p>If you have any questions about a topic in the knowledge model, enter it in the respective box to facilitate its classification and answer.</p>
+<p>Take a minute to identify where to ask your question, this will have a positive impact on the time, energy and resources required for managing questions and managing joint activities to get the answers reducing the fingerprint within the process.</p>
 <table style="width:100%;">
 <colgroup>
 <col width="16%" />
