--- a/actividades.html
+++ b/actividades.html
@@ -352,19 +352,13 @@ div.tocify {
   <a href="index.html">4GlobalSostenibilidad</a>
 </li>
 <li>
+  <a href="actividades.html">Activities</a>
+</li>
+<li>
   <a href="temas.html">Topics</a>
 </li>
 <li>
   <a href="comunidad.html">Network Community</a>
-</li>
-<li>
-  <a href="actividades.html">Activities</a>
-</li>
-<li>
-  <a href="noticias.html">News</a>
-</li>
-<li>
-  <a href="data.html">Resources</a>
 </li>
 <li>
   <a href="contacto.html">Contact</a>
@@ -387,23 +381,12 @@ div.tocify {
 </div>
 
 
+<p>4GlobalSustainability is an active community that shares data, information, knowledge and experiences related to sustainability</p>
 <div id="webinars" class="section level1">
 <h1>Webinars</h1>
-<p>coming soon</p>
-</div>
-<div id="workshops" class="section level1">
-<h1>Workshops</h1>
-<p>coming soon</p>
-</div>
-<div id="trainings" class="section level1">
-<h1>Trainings</h1>
-<p>coming soon</p>
-</div>
-<div id="projects" class="section level1">
-<h1>Projects</h1>
-<div id="ocre---regional-school-scientific-observatory" class="section level2">
-<h2>OCRE - Regional School Scientific Observatory</h2>
-<p>The Scientific School Observatory is an initiative of teachers from different higher education establishments (Universidad de Concepción, Universidad de la Serena, Universidad Adventista currently [04-28-2021]) in Chile, committed and aligned with development and decentralization processes in the region and the country, seeking with interest the free development of individuals, especially the high school community, where teachers and students elaborate part of the foundation of our society. At the same time that we build preventive actions against environmental and social problems, we are facing the challenges in the network.<a href="https://observatoriocientifico.github.io/">Visit site</a></p>
+<div id="webinar-sustainability-4.0" class="section level2">
+<h2>20210803 15:00 webinar sustainability 4.0</h2>
+<p>The webinar will be based on the questions to the GSSD knowledge model. The questions will be collected in the topics section, during the month of May and June until Tuesday, June 15, 2021.</p>
 </div>
 </div>
 
