--- a/comunidad.html
+++ b/comunidad.html
@@ -352,19 +352,13 @@ div.tocify {
   <a href="index.html">4GlobalSostenibilidad</a>
 </li>
 <li>
+  <a href="actividades.html">Activities</a>
+</li>
+<li>
   <a href="temas.html">Topics</a>
 </li>
 <li>
   <a href="comunidad.html">Network Community</a>
-</li>
-<li>
-  <a href="actividades.html">Activities</a>
-</li>
-<li>
-  <a href="noticias.html">News</a>
-</li>
-<li>
-  <a href="data.html">Resources</a>
 </li>
 <li>
   <a href="contacto.html">Contact</a>
@@ -390,54 +384,11 @@ div.tocify {
 <div id="about-us" class="section level1">
 <h1>About us</h1>
 <p>4GlobalSustainability is a Network of Institutions (formal and non-formal), Companies and Professionals with different interests (environmental, social, economic, environmental, technological, strategic) around sustainability and issues of digital transformation and industry 4.0.</p>
-</div>
-<div id="collaboration-model" class="section level1">
-<h1>Collaboration model</h1>
-<div id="institutions" class="section level2">
-<h2>Institutions</h2>
-<table>
-<thead>
-<tr class="header">
-<th>UdeC</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><img src="image/udec-150.png" /></td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="companies" class="section level2">
-<h2>Companies</h2>
-</div>
-<div id="professionals-and-people" class="section level2">
-<h2>Professionals and people</h2>
-<table>
-<colgroup>
-<col width="25%" />
-<col width="25%" />
-<col width="25%" />
-<col width="25%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Equipo</th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><img src="image/gustavo-150.png" /></td>
-<td><strong>M.Sc. Gustavo Godoy U.</strong>, School of Sciences and Technologies. Department of Geodetic and Geomatics Sciences. University of Concepción Campus Los Angeless</td>
-<td><img src="" /></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-</div>
+<p>If you want to join the community, contact us through the link as appropriate:</p>
+<ul>
+<li><a href="https://forms.gle/1iCNw7gifSXbAo8s7">Organization</a></li>
+<li><a href="https://forms.gle/MkJ4Ry4gSwzpNmaZ6">Professional</a></li>
+</ul>
 </div>
 
 
